[gd_scene load_steps=10 format=3 uid="uid://du2wxpc1g8id"]

[ext_resource type="Texture2D" uid="uid://ddu2khgk58doq" path="res://assets/sprites/back_sky.png" id="1_omn1t"]
[ext_resource type="Texture2D" uid="uid://bwa6e3r2h8vma" path="res://assets/sprites/back_cloud.png" id="2_lf3p4"]
[ext_resource type="PackedScene" uid="uid://dstm5dh3mq7bf" path="res://actors/player/Player.tscn" id="3_yydhl"]
[ext_resource type="PackedScene" uid="uid://b7ujwmiermwyl" path="res://actors/normal-bullet/NormalBullet.tscn" id="4_omn1t"]
[ext_resource type="Script" uid="uid://7k4p2abt07ou" path="res://utils/static_body_2d.gd" id="5_8bcou"]
[ext_resource type="Script" uid="uid://cu0jh680qcbxi" path="res://utils/coins_spawner.gd" id="6_f7u7y"]
[ext_resource type="PackedScene" uid="uid://cbg048kwubr86" path="res://actors/coin/Coin.tscn" id="7_jq2cn"]
[ext_resource type="Script" uid="uid://blc6arh8k5noo" path="res://utils/enemy_spawner.gd" id="8_a5s8o"]
[ext_resource type="PackedScene" uid="uid://c17oa0pjqnos7" path="res://actors/fly/fly.tscn" id="9_omn1t"]

[node name="World" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="Parallax2D" parent="Background"]
repeat_size = Vector2(1168, 0)
autoscroll = Vector2(-100, 0)
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky"]
scale = Vector2(2.02951, 2.02469)
texture = ExtResource("1_omn1t")

[node name="Cloud" type="Parallax2D" parent="Background"]
repeat_size = Vector2(1161, 0)
autoscroll = Vector2(-150, 0)
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="Background/Cloud"]
position = Vector2(0, -1.50002)
scale = Vector2(2.02778, 2.02778)
texture = ExtResource("2_lf3p4")

[node name="Player" parent="." instance=ExtResource("3_yydhl")]
collision_mask = 2
bullet_scene = ExtResource("4_omn1t")

[node name="CamBox" type="StaticBody2D" parent="."]
collision_layer = 2
script = ExtResource("5_8bcou")

[node name="Camera2D" type="Camera2D" parent="CamBox"]

[node name="wall_top" type="CollisionShape2D" parent="CamBox"]

[node name="wall_bottom" type="CollisionShape2D" parent="CamBox"]

[node name="wall_left" type="CollisionShape2D" parent="CamBox"]

[node name="wall_right" type="CollisionShape2D" parent="CamBox"]

[node name="CoinsSpawner" type="Timer" parent="."]
wait_time = 2.0
autostart = true
script = ExtResource("6_f7u7y")
coin_scene = ExtResource("7_jq2cn")

[node name="EnemySpawner" type="Timer" parent="."]
wait_time = 1.5
autostart = true
script = ExtResource("8_a5s8o")
enemy_scene = ExtResource("9_omn1t")
spawn_offset = 0.0

[connection signal="timeout" from="CoinsSpawner" to="CoinsSpawner" method="_on_coin_spawner_timeout"]
[connection signal="timeout" from="EnemySpawner" to="EnemySpawner" method="_on_enemy_spawner_timeout"]
